tests/snapshots/render/ansi@commonmark-spec-233-block_quotes.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/233-block_quotes.md
snapshot_kind: text
---
[90m▌ [0m[3mbar[0m[3m baz[0m[3m foo[0m
