tests/snapshots/render/ansi@commonmark-spec-236-block_quotes.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/236-block_quotes.md
---
  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0m[3mfoo[0m                                                                       [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0mbar                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
