tests/snapshots/render/ansi@commonmark-spec-237-block_quotes.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/237-block_quotes.md
snapshot_kind: text
---
  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m

foo

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
